html File Uploaded! and dummy text is add

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>test</h1>
+    <b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam asperiores corrupti sit dolorum! Tempore dicta incidunt cumque doloremque nihil sit! Cumque dolorem doloribus delectus enim reiciendis quasi culpa atque unde!</b>
 </body>
 </html>
