--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
             </ul>
         </nav>
     </header>
+    <section id="hero">
+        <h1>Welcome to Creative Minds</h1>
+        <p>Your partner in creative design solutions</p>
+        <a href="#contact" class="btn">Get in Touch</a>
+    </section>
+
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a team of innovative designers committed to crafting exceptional experiences for clients worldwide.</p>
+    </section>
 </body>
 </html>
