Services secition and about portfolio section successfully

--- a/index.html
+++ b/index.html
@@ -27,5 +27,22 @@
         <h2>About Us</h2>
         <p>We are a team of innovative designers committed to crafting exceptional experiences for clients worldwide.</p>
     </section>
+    <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Branding & Identity</li>
+            <li>Web Design & Development</li>
+            <li>Print & Packaging Design</li>
+        </ul>
+    </section>
+
+    <section id="portfolio">
+        <h2>Our Work</h2>
+        <div class="gallery">
+            <img src="assets/images/portfolio1.jpg" alt="Project 1">
+            <img src="assets/images/portfolio2.jpg" alt="Project 2">
+            <img src="assets/images/portfolio3.jpg" alt="Project 3">
+        </div>
+    </section>
 </body>
 </html>
