footer and contact section added successfully

--- a/index.html
+++ b/index.html
@@ -44,5 +44,14 @@
             <img src="assets/images/portfolio3.jpg" alt="Project 3">
         </div>
     </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: info@creativeminds.com | Phone: +123 456 7890</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Creative Minds. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
