Links of css and javascript file added successfully

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Creative Minds - Design Agency Portfolio">
+    <title>Creative Minds Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -52,6 +54,15 @@
     <footer>
         <p>&copy; 2024 Creative Minds. All rights reserved.</p>
     </footer>
+    <section id="contact"></section>
+        <h2>Contact Us</h2>
+        <p>Email: info@creativeminds.com | Phone: +123 456 7890</p>
+    </section>
 
+    <footer>
+        <p>&copy; 2024 Creative Minds. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
